added trades apis

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,12 +6,13 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-diesel = { version = "2.0.0", features = ["postgres"] }
+diesel = { version = "2.0.0", features = ["postgres", "r2d2", "chrono"] }
 dotenvy = "0.15"
 serde = { version = "1.0", features = ["derive"] }
 uuid = { version = "0.8.2", features = ["v4"] }
 bcrypt = "0.13.0"
 openssl = "*"
+chrono = "0.4.23"
 
 [dependencies.rocket]
 version = "0.5.0-rc.2"
